tests/files/success/object_array.sol
let array = [{ x: 1 }];
print(array);
