tests/files/fail/assign_function_to_variable.sol
fn test() {}

let new_var = test;
